fix overflow-x screen xs
Corrige el overflow horizontal que creaba la libreria de animacion

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,9 @@
     --color-secundario: #009500;
     --var-opacidad-negro: 0.8;
 }
+html, body {
+    overflow-x: hidden;
+}
 html {
     font-size: 15px;
     scroll-behavior: smooth;
